Project Overflow fix

--- a/css/index.css
+++ b/css/index.css
@@ -110,6 +110,7 @@
 #projects{
     width:100%;
     background-color:white;
+    overflow:hidden;
 }
 #projects-section-header{
     width:100%;
